[package]
name = "indexengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storageengine = { path = "../storageengine" }
bincode = "1.3.3"
anyhow = "1.0.76"
thiserror = "1.0.51"
serde = { version = "1.0.193", features = ["derive"] }
bloomfilter = { path = "../bloomfilter" }
