[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost-types = "0.12.3"
configmanager = { path = "../configmanager" }

[build-dependencies]
tonic-buf-build = "0.1.2"
tonic-build = "0.10"
