[package]
name = "storageengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
serde = { version = "1.0.193", features = ["derive"] }
bincode = "1.3.3"
tempfile = { version = "3.8.1", features = [] }
